Fixes photo-block :last-child spacing

--- a/dev/sass/elements/photo-block.scss
+++ b/dev/sass/elements/photo-block.scss
@@ -28,6 +28,6 @@
 	margin-bottom: $margin-s;
 }
 
-section.column:last-child .photo-block:last-child {
+section.column:last-child article.column:last-child .photo-block {
 	margin-bottom: 0;
 }
